--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuex": "3.1.0",
     "vuex-persist": "^2.0.1",
     "vue": "^2.6.10",
+    "vue-baidu-map": "^0.21.22",
     "vue-router": "^3.1.5"
   },
   "devDependencies": {
