--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "chart.js": "^2.9.3",
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
-    "vuex": "3.1.0",
-    "vuex-persist": "^2.0.1",
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
-    "vue-router": "^3.1.5"
+    "vue-chartjs": "^3.5.0",
+    "vue-router": "^3.1.5",
+    "vuex": "3.1.0",
+    "vuex-persist": "^2.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
