--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.10",
     "vue-baidu-map": "^0.21.22",
     "vue-chartjs": "^3.5.0",
+    "vuedraggable": "2.20.0",
     "vue-router": "^3.1.5",
     "vuex": "3.1.0",
     "vuex-persist": "^2.0.1"
